[gd_scene load_steps=5 format=3 uid="uid://d2pypsgvojf3o"]

[ext_resource type="PackedScene" uid="uid://denrvbd0f4xji" path="res://scenes/cards.tscn" id="1"]
[ext_resource type="Script" uid="uid://bqa6e67p8xdca" path="res://scripts/Deck.gd" id="2"]
[ext_resource type="FontFile" uid="uid://ra6mx2vlrw83" path="res://assets/fonts/Jacquard24-Regular.ttf" id="3_gdbsr"]

[sub_resource type="LabelSettings" id="LabelSettings_6rnap"]
font = ExtResource("3_gdbsr")
font_size = 150

[node name="Deck" type="SubViewportContainer"]
custom_minimum_size = Vector2(770, 1080)
offset_right = 770.0
offset_bottom = 1080.0
script = ExtResource("2")
stack_offset = 20
stack_x_offset = -16

[node name="DeckViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(770, 1080)
render_target_update_mode = 4

[node name="DeckControl" type="Control" parent="DeckViewport"]
custom_minimum_size = Vector2(770, 1080)
layout_mode = 3
anchors_preset = 0

[node name="StackLayers" type="Control" parent="DeckViewport/DeckControl"]
custom_minimum_size = Vector2(770, 1080)
anchors_preset = 0
offset_right = 770.0
offset_bottom = 1080.0

[node name="StackLayer3" parent="DeckViewport/DeckControl/StackLayers" instance=ExtResource("1")]
custom_minimum_size = Vector2(540, 1080)
layout_mode = 0
offset_right = 540.0
offset_bottom = 740.0
metadata/_edit_use_anchors_ = true

[node name="StackLayer2" parent="DeckViewport/DeckControl/StackLayers" instance=ExtResource("1")]
custom_minimum_size = Vector2(540, 1080)
layout_mode = 0
offset_right = 540.0
offset_bottom = 740.0
metadata/_edit_use_anchors_ = true

[node name="StackLayer1" parent="DeckViewport/DeckControl/StackLayers" instance=ExtResource("1")]
custom_minimum_size = Vector2(540, 1080)
layout_mode = 0
offset_right = 540.0
offset_bottom = 740.0
metadata/_edit_use_anchors_ = true

[node name="TopCard" parent="DeckViewport/DeckControl" instance=ExtResource("1")]
custom_minimum_size = Vector2(540, 1080)
layout_mode = 0
anchor_right = 2.7
anchor_bottom = 2.642857
metadata/_edit_use_anchors_ = true

[node name="CardCount" type="AspectRatioContainer" parent="DeckViewport/DeckControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.735
anchor_top = 0.29569572
anchor_right = 0.735
anchor_bottom = 0.29569572
offset_right = 150.0
offset_bottom = 151.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="DeckViewport/DeckControl/CardCount"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
color = Color(0, 0, 0, 0.432)

[node name="CardCountLabel" type="Label" parent="DeckViewport/DeckControl/CardCount"]
texture_filter = 1
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
text = "48"
label_settings = SubResource("LabelSettings_6rnap")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
